logs/Slang/generated/hdlconv/hdlconvertor_p202.sv.log
name: hdlconvertor_p202
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p202.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p202.sv:1:1: error: language feature not yet supported
interface class IntfClass;
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p202.sv:7:1: error: language feature not yet supported
virtual class ClassA implements IntfClass;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p202.sv:17:1: error: language feature not yet supported
class ClassB extends ClassA;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
